# memo-chan

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml  format-python.yml  lint-python.yml
discord_memo/: config.py  main.py
discord_memo/cogs/: category_manager.py  cog_utils.py  create_new_tags.py  custom_contents.py  delete_channel.py  delete_message.py  delete_tags.py  error_handler.py  example_cog.py  find_message_by_tag.py  force_rename_tag.py  group_message.py  group_messages.py  hello.py  rename_tag.py  send_search_result.py  setup.py  short_message.py  short_text_memo.py  utils.py
discord_memo/db/: crud.py  database.py  initialize.py  models.py  schemas.py
discord_memo/utils/: create_tag_and_channel.py  fetch_memo_category.py  get_tag_type.py  memo_embed.py  message_tools.py  search_tag.py  sync_memo_channels.py  validator.py
